cluster/apps/default/heck-sh/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: heck-sh
  name: heck-sh
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heck-sh
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: heck-sh
    spec:
      imagePullSecrets:
        - name: global-docker-config
      containers:
        - image: ghcr.io/yoyostile/heck.sh:latest
          imagePullPolicy: Always
          name: heck-sh
          ports:
            - containerPort: 80
              protocol: TCP
          # Sized from 30 days of observed usage.
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 48Mi
      restartPolicy: Always
