cluster/apps/default/heck-sh/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heck-sh
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: heck-sh
